Added changes to footer for social-links

--- a/index.html
+++ b/index.html
@@ -389,9 +389,10 @@ ul li::marker {
   }
 
   .footer-social-links{
+    width: 100%;
     display: flex;
     flex: 1;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .footer-text {
@@ -490,12 +491,10 @@ ul li::marker {
     position: relative;
   }
 
-
-
   .hero-content {
     position: absolute;
         top: -10%;
-        left: 147%;
+        left: 145%;
         text-align: center;
         transform: translateX(-180%);
         width: fit-content;
@@ -608,9 +607,10 @@ ul li::marker {
   }
 
   .footer-social-links{
+    width: 100%;
     display: flex;
     flex: 1;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .footer-text {
