Made changes in hero and social-links

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ body {
     display: flex;
     flex: 1;
     justify-content: space-around;
+    flex-wrap: wrap;
   }
 
   .social-icon img{
@@ -270,7 +271,7 @@ body {
     }
 
     .yellow-line{
-      width: 3pt;
+      width: 4pt;
       height: auto;
       background: #FFBB1C;
     }
@@ -751,8 +752,7 @@ body {
 
   .hero-content {
     position: absolute;
-        top: -10%;
-        left: 145%;
+      
         text-align: center;
         transform: translateX(-180%);
         width: fit-content;
